2001-11-08  Mark McLoughlin  <mark@skynet.ie>

	* basep-widget.c: (basep_pos_get_hide_size),
	(basep_pos_get_hide_pos), (basep_widget_do_hiding),
	(basep_widget_do_showing), (basep_widget_explicit_hide),
	(basep_widget_explicit_show), (basep_widget_autoshow),
	(basep_widget_queue_autoshow), (basep_widget_autohide),
	(basep_widget_queue_autohide): update gconf key names.

	* floating-widget.c: (floating_pos_get_hide_size),
	(floating_pos_get_hide_pos): ditto.

2001-11-08  Glynn Foster  <glynn.foster@sun.com>

	* panelglobalconfig.schema: Update. Well actually
	fix :)

2001-11-08  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: install schema using gconftool.

2001-11-08  Mark McLoughlin  <mark@skynet.ie>

	* basep-widget.c, button-widget.c, menu-fentry.c
	  menu-properties.c, menu-rh.c, menu-util.c, menu.c,
	  panel-widget.c, session.c, status.c: sensible debugging
	defines. undef them all so warnings don't get lost.

2001-11-07  Mark McLoughlin  <mark@skynet.ie>

	* launcher.c: (is_this_drop_ok): use GDK_POINTER_TO_ATOM
	instead of GPOINTER_TO_UINT.

	* menu-fentry.c: (get_applet_goad_id_from_ditem) make static.

	* panel.c: (get_target_list): impl.
	(is_this_drop_ok): kill GPOINTER_TO_UINT atom usage.

	* tasklist_icon.c: (tasklist_icon_check_mini): use GdkAtom.

	* xstuff.[ch]: (xstuff_nautilus_desktop_present),
	(xstuff_set_simple_hint), (status_event_filter),
	(get_typed_property_data), (send_client_message_1L),
	(xstuff_setup_global_desktop_area), (xstuff_setup_desktop_area),
	(xstuff_unsetup_desktop_area): bunch of GdkAtom/Atom related
	warnings fixage.

2001-11-7   Glynn Foster  <glynn.foster@sun.com>

	* basep-widget.c: Fix bug in set_property call.

2001-11-07  Glynn Foster  <glynn.foster@sun.com>

	* Makefile.am, basep-widget.c, floating-widget.c, panel-gconf.c,
	  panel-gconf.h, panel_config_global.h, session.c, session.h: 

	  More property stuff...mostly dumb stuff though. Added installation
	  of schema too.
