@@ -11,16 +11,12 @@ struct _GlobalConfig {
 	int hide_delay;
 	int show_delay;
 	gboolean tooltips_enabled;
-	gboolean show_dot_buttons;
-	gboolean show_menu_titles;
-	gboolean hungry_menus;
-	gboolean off_panel_popups;
+	gboolean keep_menus_in_memory;
 	gboolean disable_animations;
 	gboolean autoraise;
-	gboolean keep_bottom;
-	gboolean normal_layer;
+	PanelLayer layer;
 	gboolean drawer_auto_close;
-	gboolean saturate_when_over;
+	gboolean highlight_when_over;
 	gboolean confirm_panel_remove;
 	gboolean keys_enabled;
 	char *menu_key;
