@@ -1,3 +1,11 @@
+2001-11-08  Glynn Foster  <glynn.foster@sun.com>
+
+	* applet.c, basep-widget.c, button-widget.c,
+	  menu-util.c, menu.c, panel-gconf.c, panel-gconf.h:
+	  panel-types.h, panel_config_global.h, panelglobalconfig.schema,
+	  session.c: More shifting towards gconf - some renames of variables
+	  lots of FIXME's.
+
 2001-11-08  Mark McLoughlin  <mark@skynet.ie>
 
 	* basep-widget.c: (basep_pos_get_hide_size),
